---
source: crates/biome_module_graph/tests/snap/mod.rs
expression: content
---

# `/src/promisedResult.ts`

## Source

```ts
export type PromisedResult = Promise<{ result: true | false }>;
```

## Module Info

```
Exports {
  "PromisedResult" => {
    ExportOwnExport => JsOwnExport::Binding(12..26)
  }
}
Imports {
  No imports
}
```

## Exported Bindings

```
PromisedResult  => BindingTypeData {
  Types Module(0) TypeId(3),
}
```

## Registered types

```
Module TypeId(0) => bool: true

Module TypeId(1) => bool: false

Module TypeId(2) => Object {
  prototype: No prototype
  members: ["result": boolean]
}

Module TypeId(3) => instanceof Promise<Module(0) TypeId(2)>
```

# `/src/index.ts`

## Source

```ts
import type { PromisedResult } from "./promisedResult.ts";

function returnPromiseResult(): PromisedResult {
	return new Promise((resolve) => resolve({ result: true }));
}

export { returnPromiseResult };
```

## Module Info

```
Exports {
  "returnPromiseResult" => {
    ExportOwnExport => JsOwnExport::Binding(77..96)
  }
}
Imports {
  "PromisedResult" => {
    Specifier: "./promisedResult.ts"
    Resolved path: "/src/promisedResult.ts"
    Import Symbol: PromisedResult
  }
}
```

## Exported Bindings

```
returnPromiseResult => BindingTypeData {
  Types Module(0) TypeId(7),
}
```

## Registered types

```
Module TypeId(0) => Promise

Module TypeId(1) => Module(0) TypeId(7)

Module TypeId(2) => bool: true

Module TypeId(3) => Object {
  prototype: No prototype
  members: ["result": Module(0) TypeId(2)]
}

Module TypeId(4) => instanceof Import Symbol: PromisedResult from "/src/promisedResult.ts"

Module TypeId(5) => sync Function {
  accepts: {
    params: [
      required resolve: unknown
    ]
    type_args: []
  }
  returns: Module(0) TypeId(4)
}

Module TypeId(6) => instanceof Module(0) TypeId(0)

Module TypeId(7) => sync Function "returnPromiseResult" {
  accepts: {
    params: []
    type_args: []
  }
  returns: Module(0) TypeId(4)
}
```
